# mikefromit-website

./: .gitignore  .travis.yml  Dockerfile  Dockerfile-travis  Makefile  Procfile  README.md  docker-compose.override.yml  docker-compose.yml  manage.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  travis-compose.yml  wsgi.py
.pytest_cache/v/cache/: nodeids
instance/: conf.py
migrations/: env.py
migrations/versions/: b838644f8baf_initial_schema.py
tests/: conftest.py
tests/unit/: test_home.py  test_utils.py
website/: __init__.py  core.py  factory.py  helpers.py  models.py  redis_session.py  utils.py
website/accounts/: models.py
website/home/: views.py
website/templates/home/: home.html
website/templates/includes/: nav.html
website/templates/layouts/: base.html  security.html
website/templates/macros/: form_errors.html
website/templates/security/: login_user.html
