[wheel]
universal = 1

[metadata]
description-file = README.md

[tool:pytest]
addopts= --verbose --cov=sprint/ --cov-report=xml:cov.xml --cov-report=term tests/
norecursedirs = build docs/_build *.egg .tox *.venv /home/travis/virtualenv
postgresql_host = 127.0.0.1
postgresql_port = 5432
postgresql_user = postgres

[aliases]
test=pytest

